--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@
 	stroke: white;
 	stroke-width: .3px;
 	fill: gray;
+	stroke-linecap: round;
 }
 
 #content {
-	display: block;
+	display: inline-block;
     width: 100%;
     text-align: center;
     padding-top: 2cm
