--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,55 @@
 	stroke-width: .3px;
 	fill: gray;
 	stroke-linecap: round;
+	border: medium solid #999;
+	margin: 10px 0 0 20px;
 }
 
-#content {
+/*#content {
 	display: inline-block;
     width: 100%;
     text-align: center;
     padding-top: 2cm
+}*/
+
+.chart {
+    float: right;
+    margin: 7px 20px 0 0;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    fill: #999;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
 }
