--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
 /* 575 boilerplate style.css */
 
+body {
+    /*background-image: url('../data/background.png');
+    opacity: 50%;    
+    opacity: .6; */
+    background-color: #eee;
+}
+
 .map {
-	stroke: white;
-	stroke-width: .3px;
-	fill: gray;
+	stroke: #e5e5e5;
+	stroke-width: .5px;
+	fill: white;
 	stroke-linecap: round;
-	border: medium solid #999;
-	margin: 10px 0 0 20px;
+    opacity: 1;
+/*	border: medium solid #999;
+	margin: 10px 0 0 20px;*/
 }
 
 /*#content {
@@ -16,28 +24,49 @@
     padding-top: 2cm
 }*/
 
-.chart {
-    float: right;
-    margin: 7px 20px 0 0;
+#wrapper {
+    display: inline-block;
 }
 
-.chartTitle {
+#content {
+    width: 100%;
+}
+
+#chartContainer {
+    display: inline-block;
+    float: left
+    width: 100%;
+
+
+}
+
+#panel {
+    width: 25%;
+    float: right;
+}
+
+/*.chart {
+    width: ;
+}
+*/
+#title {
     font-family: sans-serif;
-    font-size: 1.5em;
+    font-size: 2.5em;
     font-weight: bold;
+    text-align: center;
 }
 
 .chartBackground {
-    fill: rgba(128,128,128,.2);
+    fill: rgba(0,0,0,0);
 }
-
+/*
 .chartFrame {
     fill: none;
     stroke: #999;
     stroke-width: 3px;
     shape-rendering: crispEdges;
 }
-
+*/
 .axis path,
 .axis line {
     fill: none;
@@ -49,11 +78,16 @@
 .axis text {
     font-family: sans-serif;
     font-size: 0.8em;
-    fill: #999;
+    fill: black;
 }
 
 .chartTitle {
     font-family: sans-serif;
     font-size: 1.5em;
     font-weight: bold;
+}
+
+.bars {
+    stroke: #e5e5e5;
+    stroke-width: .3px;
 }
