--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #eee;
 }
 
+
 .map {
 	stroke: #e5e5e5;
 	stroke-width: .5px;
@@ -40,6 +41,27 @@ body {
 
 }
 
+#title {
+    font-family: sans-serif;
+    font-size: 2.5em;
+    font-weight: bold;
+    padding: 10px 0 0 0;
+    text-align: center;
+}
+
+#chartTitle {
+/*    position: absolute;
+    top: 14px;
+    left: 30px;
+    z-index: 10;*/
+    font-family: sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+   /* border: 1px solid #999;
+    box-shadow: 2px 2px 4px #999;*/
+}
+
 #panel {
     width: 25%;
     float: right;
@@ -49,12 +71,7 @@ body {
     width: ;
 }
 */
-#title {
-    font-family: sans-serif;
-    font-size: 2.5em;
-    font-weight: bold;
-    text-align: center;
-}
+
 
 .chartBackground {
     fill: rgba(0,0,0,0);
@@ -81,13 +98,52 @@ body {
     fill: black;
 }
 
-.chartTitle {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-}
 
 .bars {
     stroke: #e5e5e5;
-    stroke-width: .3px;
+    stroke-width: .5px;
+}
+
+.dropdown {
+
+    top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid #999;
+    box-shadow: 1px 1px 2px #999;
+}
+
+option {
+    font-weight: normal;
+}
+
+.infolabel {
+    position: absolute;
+/*    height: 50px;*/
+    min-width: 50px;
+    color: #fff;
+    background-color: #000;
+    border: solid thin #fff;
+    padding: 5px 20px;
+    text-align: center;
+    top: -75px;
+}
+
+.infolabel h4 {
+    margin: 0 20px 0 0;
+    padding: 0;
+/*    display: inline-block;*/
+    line-height: 1em;
+}
+
+.infolabel p {
+    margin: 0 20px 0 0;
+    padding: 0;
+/*    display: inline-block;*/
+    font-size: 15px;
 }
