--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,36 @@
-/* 575 boilerplate style.css */
 
 body {
-    /*background-image: url('../data/background.png');
-    opacity: 50%;    
-    opacity: .6; */
-    background-color: #eee;
+	font-family: 'Lato', sans-serif;
+    background-color: #e9e9f3;
+    /* background-color: #eee; */
+    color: #788462;
+    margin: 0 20px 0 20px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Raleway', sans-serif;	
+	font-weight: 700;
+	color: #565e46;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.mt-0 {
+    margin-top: 0;
+}
+
+.mb-0 {
+    margin-bottom: 0;
+}
 
 .map {
-	stroke: #e5e5e5;
-	stroke-width: .5px;
+	stroke: white;
+	stroke-width: 1px;
 	fill: white;
 	stroke-linecap: round;
     opacity: 1;
@@ -19,27 +39,13 @@ body {
 }
 
 
-/*#content {
-	display: inline-block;
-    width: 100%;
-    text-align: center;
-    padding-top: 2cm
-}*/
 
-#wrapper {
+/* #chartContainer {
     display: inline-block;
-}
-
-#content {
-    width: 100%;
-}
-
-#chartContainer {
-    display: inline-block;
-    float: left
+    float: left;
     width: 100%;
     padding-left: 15px;
-}
+} */
 
 #title {
     font-family: sans-serif;
@@ -50,31 +56,7 @@ body {
     opacity: .85;
 }
 
-#chartTitle {
-/*    position: absolute;
-    top: 14px;
-    left: 30px;
-    z-index: 10;*/
-    font-family: sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    opacity: .7;
-   /* border: 1px solid #999;
-    box-shadow: 2px 2px 4px #999;*/
-}
 
-#panel {
-    width: 25%;
-    float: right;
-    padding-right: 10px
-
-}
-
-/*.chart {
-    width: ;
-}
-*/
 
 
 .chartBackground {
@@ -104,8 +86,8 @@ body {
 
 
 .bar {
-    stroke: #e5e5e5;
-    stroke-width: .5px;
+    stroke: white;
+    stroke-width: 1px;
 }
 
 .dropdown {
@@ -124,15 +106,6 @@ body {
 #variableheader{
     margin-top: 20px;
     text-align: center;
-
-}
-
-#variableheader h5 {
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 0;
-    opacity: .9;
 
 }
 
